--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "payment"]
 	path = payment
 	url = https://github.com/GretiCani/spring-boot-stripe-payment-integration.git
+[submodule "image-upload"]
+	path = image-upload
+	url = https://github.com/GretiCani/webflux-image-upload.git
